--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en-US">
 
 
-<!-- Mirrored from us-volumepills.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 20 Nov 2023 08:35:36 GMT -->
 <head>
     <!-- Site made with Mobirise Website Builder v5.6.5, https://mobirise.com -->
     <meta charset="UTF-8">
@@ -21,7 +20,7 @@
         content="volume pills,volume pills uk,volume pills coupon code,where to buy volume pills," />
 
 
-    <title>Volume Pills® (Official) | Save $559 Today Only!</title>
+    <title>Volume Pills™ (2023)| Official Site - 58% off Today"</title>
     <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
     <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -39,9 +38,7 @@
     </noscript>
     <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css">
     <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
-    <meta name="google-site-verification" content="mb1oo8oKV3uI56FeQdqrHJcW_zXebNCrILhdOZbVxOs" />
-<meta name="msvalidate.01" content="FC3F1A256D7BE92C28AFBD7649B0C948" />
-
+    
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-235349626-1"></script>
 <script>
@@ -508,7 +505,7 @@
             <div class="row mbr-gallery mt-4">
                 <div class="col-12 col-md-6 col-lg-4 item gallery-image">
 
-                    <a href="https://healthyyguides.info/r/volumepills"><img class="w-100 JCB_Price" src="assets/images/1-month-volume-pills-supply.png"
+                    <a href="https://www.volumepills.com/ct/752831"><img class="w-100 JCB_Price" src="assets/images/1-month-volume-pills-supply.png"
                             alt="1 month volume pills supply" data-slide-to="0" data-bs-slide-to="0"></a>
 
 
@@ -516,7 +513,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 item gallery-image">
 
-                    <a href="https://healthyyguides.info/r/volumepills"> <img class="w-100 JCB_Price" src="assets/images/3-month-volume-pills-supply.png"
+                    <a href="https://www.volumepills.com/ct/752831"> <img class="w-100 JCB_Price" src="assets/images/3-month-volume-pills-supply.png"
                             alt="3 month volume pills supply" data-slide-to="1" data-bs-slide-to="1"></a>
 
 
@@ -524,7 +521,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 item gallery-image">
 
-                    <a href="https://healthyyguides.info/r/volumepills"> <img class="w-100 JCB_Price" src="assets/images/2-month-volume-pills-supply.png"
+                    <a href="https://www.volumepills.com/ct/752831"> <img class="w-100 JCB_Price" src="assets/images/2-month-volume-pills-supply.png"
                             alt="2 month volume pills supply" data-slide-to="2" data-bs-slide-to="2">
 
 
@@ -679,7 +676,7 @@
                                 <br>Consider this a trial run in case things don't go your way. Volume Pills supplement
                                 may work. If it doesn't, you can ask for your money back.<br>
                             </p>
-                            <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-5" href="https://healthyyguides.info/r/volumepills"><span
+                            <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-5" href="https://www.volumepills.com/ct/752831"><span
                                         class="mobi-mbri mobi-mbri-arrow-next mbr-iconfont mbr-iconfont-btn"></span>&nbsp;
                                     ORDER NOW&nbsp;</a></div>
                         </strong>
@@ -905,7 +902,7 @@
             <div class="row mbr-gallery mt-4">
                 <div class="col-12 col-md-6 col-lg-4 item gallery-image">
 
-                    <a href="https://healthyyguides.info/r/volumepills"><img class="w-100 JCB_Price" src="assets/images/1-month-volume-pills-supply.png"
+                    <a href="https://www.volumepills.com/ct/752831"><img class="w-100 JCB_Price" src="assets/images/1-month-volume-pills-supply.png"
                             alt="1 month volume pills supply" data-slide-to="0" data-bs-slide-to="0"></a>
 
 
@@ -913,7 +910,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 item gallery-image">
 
-                    <a href="https://healthyyguides.info/r/volumepills"> <img class="w-100 JCB_Price" src="assets/images/3-month-volume-pills-supply.png"
+                    <a href="https://www.volumepills.com/ct/752831"> <img class="w-100 JCB_Price" src="assets/images/3-month-volume-pills-supply.png"
                             alt="3 month volume pills supply" data-slide-to="1" data-bs-slide-to="1"></a>
 
 
@@ -921,7 +918,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 item gallery-image">
 
-                    <a href="https://healthyyguides.info/r/volumepills"> <img class="w-100 JCB_Price" src="assets/images/2-month-volume-pills-supply.png"
+                    <a href="https://www.volumepills.com/ct/752831"> <img class="w-100 JCB_Price" src="assets/images/2-month-volume-pills-supply.png"
                             alt="2 month volume pills supply" data-slide-to="2" data-bs-slide-to="2">
 
 
@@ -1095,7 +1092,7 @@
                                     <p class="mbr-fonts-style panel-text display-7">
                                         No. Volume Pills is only available on this page that links to the official
                                         store. It is not available anywhere else, including online or in stores. The one
-                                        and only place you can get Volume Pills&nbsp;is on the <a href="https://healthyyguides.info/r/volumepills"
+                                        and only place you can get Volume Pills&nbsp;is on the <a href="https://www.volumepills.com/ct/752831"
                                             class="text-primary">official website.</a></p>
                                 </div>
                             </div>
@@ -1148,7 +1145,7 @@
                         </h3>
                         <p class="mbr-text mbr-fonts-style display-2"><strong>Only for: $33/per Pack</strong></p>
 
-                        <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-5" href="https://healthyyguides.info/r/volumepills"><span
+                        <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-5" href="https://www.volumepills.com/ct/752831"><span
                                     class="mobi-mbri mobi-mbri-cart-add mbr-iconfont mbr-iconfont-btn"></span>GET
                                 58% DISCOUNT NOW!&nbsp;</a></div>
                     </div>
@@ -1263,7 +1260,3 @@
                 class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
     <input name="animation" type="hidden">
 </body>
-
-
-<!-- Mirrored from us-volumepills.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 20 Nov 2023 08:35:50 GMT -->
-</html>
