--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         </p>
 
 
-                        <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-2" href="https://www.usa-folexin.com/"><span
+                        <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-2" href="https://www.volumepills.com/ct/752831"><span
                                     class="mobi-mbri mobi-mbri-cart-add mbr-iconfont mbr-iconfont-btn"></span>&nbsp; Buy Volume Pills Now
                                 &nbsp;</a></div>
                     </div>
@@ -1240,7 +1240,7 @@
                 </div>
                 <div class="row row-copirayt">
                     <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-4">© Copyright <script>document.write(new Date().getFullYear())</script> <a
-                            href="index.html" class="text-white">us-volumepills.com</a>. All Rights Reserved.
+                            href="index.html" class="text-white">usa-volumepills.us</a>. All Rights Reserved.
                     </p>
                 </div>
             </div>
