--- a/terms.html
+++ b/terms.html
@@ -199,7 +199,7 @@
                     </div></div>
             </div>
             <div class="row row-copirayt">
-                <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-4">© Copyright <script>document.write(new Date().getFullYear())</script> <a href="index.html" class="text-primary">us-volumepills.com</a>. All Rights Reserved.
+                <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-4">© Copyright <script>document.write(new Date().getFullYear())</script> <a href="index.html" class="text-primary">usa-volumepills.us</a>. All Rights Reserved.
                 </p>
             </div>
         </div>
