--- a/index.html
+++ b/index.html
@@ -1220,8 +1220,7 @@
                             <p>Statements on this website have not been evaluated by the Food and Drug Administration.
                                 Products are not intended to diagnose, treat, cure or prevent any disease. If you are
                                 pregnant, nursing, taking medication, or have a medical condition, consult your
-                                physician before using our products. <a href='https://www.vigrxplus-usa.us/' target='_blank'>vigrx plus</a> |
-<a href='https://www.usa-provestra-us.com/' target='_blank'>provestra</a></p>
+                                physician before using our products.</p>
 
                             <p>The website's content and the product for sale is based upon the author's opinion and is
                                 provided solely on an "AS IS" and "AS AVAILABLE" basis. You should do your own
